# vid2txt

./: .editorconfig  .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json  vid2text_microsaas.md
.github/workflows/: ci.yml
.husky/: pre-commit
apps/api/: README.md  mypy.ini  package.json  pyproject.toml  ruff.toml
apps/api/src/app/: main.py
apps/api/tests/: test_health.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(legal)/: layout.tsx
apps/web/src/app/(legal)/privacy/: page.tsx
apps/web/src/app/(legal)/terms/: page.tsx
apps/web/src/app/api/auth/[...nextauth]/: route.ts
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/app/processing/: page.tsx
apps/web/src/app/results/[id]/: page.tsx
apps/web/src/lib/: auth.ts
apps/web/src/styles/: globals.css
infra/: docker-compose.yml
