[project]
name = "vid2text-api"
version = "0.1.0"
description = "FastAPI backend for Vid2Text"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.1",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "loguru>=0.7.2",
  "SQLAlchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "alembic>=1.13.1",
  "redis>=5.0.4",
  "celery>=5.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.9",
  "black>=24.4.2",
  "mypy>=1.10.0",
  "types-requests>=2.32.0.20240622",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/*"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
check_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"



